doc: Adds getProfile endpoint doc
